editor-support/tree-sitter-petal/grammar.js
    source_file: $ => repeat($._statement),

    // ---- Statements ----

    _statement: $ => choice(
      $.import_statement,
      $.let_declaration,
      $.state_declaration,
      $.function_declaration,
      $.enum_declaration,
      $.class_declaration,
      $.for_statement,
      $.while_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.assignment,
      $.set_statement,
      $._expression,
    ),

    // The module-import forms (see docs/module-system.md):
    //   import ui                    (qualified)
    //   import ui: button, clicked   (selective, comma-separated names)
    //   import ui as u               (aliased)
    //   import bloom/menu            (a package path: `/`-joined segments)
    //   import bloom/menu: *         (the module's whole exported surface)
    //   pub import bloom/menu: *     (a re-export)
    // `as` is contextual in the real parser; here it is a keyword literal,
    // which is safe because a syntax-highlighting grammar never needs `as`
    // as an ordinary identifier. The selective list requires commas between
    // names, matching the parser and stopping the list at the next statement.
    import_statement: $ => seq(
      optional(PUB),
      'import',
      field('module', $.module_path),
      optional(choice(
        seq('as', field('alias', $.identifier)),
        seq(
          ':',
          choice(
            field('wildcard', '*'),
            seq(
              field('name', $.identifier),
              repeat(seq(',', field('name', $.identifier))),
            ),
          ),
        ),
      )),
    ),

    // A module's identity: one or more identifier segments joined by `/`
    // (rust/src/parse.rs `expect_path_segment`). A flat name is the one-segment
    // case, so this node covers `import ui` too.
    module_path: $ => seq(
      field('segment', $.identifier),
      repeat(seq('/', field('segment', $.identifier))),
    ),

    // `export` is a prefix on a declaration, not a wrapper node: the real
    // parser (rust/src/parse.rs `parse_export`) dispatches straight into
    // `parse_fn_decl` / `parse_let` / `parse_state` / `parse_enum_decl` with an
    // `exported` flag, producing the same node with one extra leading token.
    // Mirroring that keeps the tree shapes identical. Those forms — fn, let,
    // var, `config let`, state, enum, class and import — are exactly what
    // `export` may precede.

    // `let x = v` and its mutable twin `var x = v`, each with an optional
    // `: type` annotation.
    let_declaration: $ => seq(
      optional(PUB),
      // `config let x = …` marks an edit knob for propose-edit (docs/CLI.md).
      // `config` is a contextual identifier in the real lexer, recognized only
      // in this slot, so it is a literal here and stays usable as a name.
      optional('config'),
      choice('let', 'var'),
      field('name', $.identifier),
      optional(field('type', $.type_annotation)),
      '=',
      field('value', $._expression),
    ),

    // `state name = init` or keyed `state(expr) name = init`, with the same
    // optional `: type` annotation `let`/`var` take.
    state_declaration: $ => seq(
      optional(PUB),
      'state',
      optional(seq('(', field('key', $._expression), ')')),
      optional('var'),
      field('name', $.identifier),
      optional(field('type', $.type_annotation)),
      '=',
      field('value', $._expression),
    ),

    // `fn name(...)` or the method form `fn Class.name(...)`, whose receiver
    // class is the name before the dot (rust/src/parse.rs `parse_fn_decl`).
    // Higher precedence than `lambda`: at statement start `fn name(…)` is
    // always a declaration, never an argless lambda calling `name`.
    function_declaration: $ => prec(1, seq(
      optional(PUB),
      'fn',
      optional(seq(field('class', $.identifier), '.')),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('return_type', $.return_type)),
      optional(field('body', $.block)),
      'end',
    )),

    // Optional static type declarations (docs/syntax/types.md). Type names are
    // *contextual* — `int`/`float`/`str` stay callable builtins elsewhere — so
    // a type is just an identifier here, plus the two vocabulary names that lex
    // as keywords (`nil`, `enum`). Unrecognized names parse fine; the real
    // checker warns about them.
    type_annotation: $ => seq(':', field('type', $.type_name)),

    // `-> t` on a *named* fn only. A lambda's `->` introduces its body, so
    // lambdas take no return annotation (type-declarations-plan.md §2).
    return_type: $ => seq('->', field('type', $.type_name)),

    type_name: $ => choice($.identifier, 'nil', 'enum'),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    // Higher precedence than an expression: after `fn`, a leading `(` is always
    // the parameter list, never a parenthesized body (the documented wart —
    // `fn (a + b) * 2 end` reads `(a + b)` as parameters).
    //
    // `= expr` gives the parameter a default value: an expression evaluated in
    // the callee on every call that omits the argument (rust/src/parse.rs
    // `parse_param_default`). The annotation, when there is one, comes first.
    // The real parser rejects a default on an enum variant's field, which
    // shares this rule; a highlighting grammar need not.
    parameter: $ => prec(1, seq(
      field('name', $.identifier),
      optional(field('type', $.type_annotation)),
      optional(seq('=', field('default', $._expression))),
    )),

    // `class Name` … `end`, comma-separated `field: type` declarations — the
    // same comma rule as `enum` (docs/syntax/commas.md). `class` is a
    // *contextual* keyword in the real lexer (it stays usable as an identifier
    // and as the JSX `class=` attribute); as with `as`, a highlighting grammar
    // can treat it as a literal.
    class_declaration: $ => seq(
      optional(PUB),
      'class',
      field('name', $.identifier),
      commaSep($.class_field),
      'end',
    ),

    class_field: $ => seq(
      field('name', $.identifier),
      optional(field('type', $.type_annotation)),
    ),

    enum_declaration: $ => seq(
      optional(PUB),
      'enum',
      field('name', $.identifier),
      commaSep($.enum_variant),
      'end',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(field('fields', $.parameter_list)),
    ),

    set_statement: $ => prec.right(PREC.assign, seq(
      'set',
      field('left', $._expression),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '++=', '??=')),
      field('right', $._expression),
    )),

    // A run of statements; the `end`/`else`/`elsif`/`when` that closes the
    // enclosing form is a keyword, so the repeat stops there naturally.
    block: $ => repeat1($._statement),

    // ---- Expressions ----

    _expression: $ => choice(
      $.identifier,
      $.integer,
      $.float,
      $.string,
      $.raw_string,
      $.boolean,
      $.nil,
      $.color,
      $.list,
      $.record,
      $.lambda,
      $.if_expression,
      $.match_expression,
      $.unary_expression,
      $.get_expression,
      $.binary_expression,
      $.pipe_expression,
      $.call,
      $.field_access,
      $.index_access,
      $.parenthesized_expression,
      $.jsx_element,
    ),

    binary_expression: $ => {
      const table = [
        ['||', PREC.or],
        ['&&', PREC.and],
        ['==', PREC.equality],
        ['!=', PREC.equality],
        ['<', PREC.comparison],
        ['<=', PREC.comparison],
        ['>', PREC.comparison],
        ['>=', PREC.comparison],
        ['??', PREC.coalesce],
        ['++', PREC.concat],
        ['+', PREC.additive],
        ['-', PREC.additive],
        ['*', PREC.multiplicative],
        ['/', PREC.multiplicative],
        ['%', PREC.multiplicative],
      ];
      return choice(...table.map(([op, p]) => prec.left(p, seq(
        field('left', $._expression),
        field('operator', op),
        field('right', $._expression),
      ))));
    },

    call: $ => prec(PREC.postfix, seq(
      field('function', $._expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq('(', commaSep(choice($.named_argument, $._expression)), ')'),

    // `f(x, limit: 10)` — a named argument binds to the parameter of that
    // name. The real parser accepts any keyword as the name (`f(end: 1)`),
    // just as it does for a record key; this rule takes the same (lossy)
    // shortcut as `record_field` and models only an identifier.
    named_argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expression),
    ),

    // `?.` is the tolerant spelling: `rec?.missing` is nil rather than an
    // error, and one `?.` makes the rest of its chain tolerant too. It is a
    // read-only form — `a?.b = v` is rejected by the Rust parser, a rule the
    // grammar does not try to encode (an assignment target is a plain
    // `_expression` here).
    field_access: $ => prec(PREC.postfix, seq(
      field('object', $._expression),
      field('operator', choice('.', '?.')),
      field('field', $.identifier),
    )),

    // The `[` is immediate (no whitespace before it) so that real indexing
    // (`arr[i]`) is distinguished from an expression statement followed by a
    // list literal on the next line — newlines being insignificant here.
    // `a?.[i]` is the optional spelling, matching JavaScript. It is lexed as
    // the single token `?.[` rather than `?.` followed by `[`: as two tokens
    // the state after `?.` is ambiguous between this rule and `field_access`,
    // and the generator resolves it toward a field name, misparsing `a?.[0]`
    // as `a?.<missing>` indexed by `0`. One token makes the lexer's
    // longest-match decide, which needs no lookahead at all.
    index_access: $ => prec(PREC.postfix, seq(
      field('object', $._expression),
      choice(token.immediate('['), field('operator', '?.[')),
      field('index', $._expression),
      ']',
    )),

    list: $ => seq('[', commaSep($._expression), ']'),

    lambda: $ => seq(
      'fn',
      optional(field('parameters', $.parameter_list)),
      choice(
        seq('->', field('body', $._expression)),
        seq(optional(field('body', $.block)), 'end'),
      ),
    ),

    match_expression: $ => seq(
      'match',
      field('subject', $._expression),
      repeat($.match_arm),
      'end',
    ),

    match_arm: $ => seq(
      'when',
      field('pattern', $._pattern),
      optional($.guard),
      choice(
        seq('->', field('body', $._expression)),
        seq('do', optional(field('body', $.block)), 'end'),
      ),
    ),

    _pattern: $ => choice(
      $.variant_pattern,
      $.list_pattern,
      $.record_pattern,
      $.literal_pattern,
      $.identifier, // variable binding or `_` wildcard
    ),

    variant_pattern: $ => prec(1, seq(
      field('name', $.identifier),
      '(',
      commaSep($._pattern),
      ')',
    )),

    jsx_element: $ => prec(PREC.jsx, choice(
      $.jsx_self_closing_element,
      seq(
        $.jsx_opening_element,
        repeat($._jsx_child),
        $.jsx_closing_element,
      ),
    )),

    jsx_opening_element: $ => seq(
      field('name', $.jsx_open_tag),
      repeat($.jsx_attribute),
      '>',
    ),

    jsx_closing_element: $ => seq(field('name', $.jsx_close_tag), '>'),

    // `<tag` and `</tag` are single tokens: a `<` (or `</`) immediately
    // followed by a letter is unambiguously a JSX tag start, never the `<`
    // operator — exactly how the lexer disambiguates (lexer.rs reads a JSX tag
    // when `<` is followed by an alphabetic char). Because this token is longer
    // than the `<` operator, tree-sitter's lexer prefers it whenever it
    // applies, so a comparison must be written with a space (`a < b`).
    jsx_open_tag: _ => token(seq('<', /[a-zA-Z][a-zA-Z0-9_.-]*/)),

    jsx_close_tag: _ => token(seq('</', /[a-zA-Z][a-zA-Z0-9_.-]*/)),

    jsx_attribute: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', choice($.string, $.jsx_expression)),
    ),

    jsx_expression: $ => seq('{', optional($._expression), '}'),

    _jsx_child: $ => choice(
      $.jsx_element,
      $.jsx_expression,
      $.jsx_text,
    ),

    // ---- Literals & terminals ----

    // Identifiers may end in `?` (e.g. `even?`). That trailing `?` is a
    // *separate* immediate token rather than part of the identifier regex,
    // because `rec?.field` and `a??b` have to split the other way. Folding it
    // into the regex makes the identifier DFA swallow the `?` — longest match
    // — so `rec?.field` lexes as the identifier `rec?` followed by a stray `.`
    // and `xs?.[0]` fails outright. As its own token the choice is made at the
    // `?` by longest match among the operators valid there: `?.` and `??` (two
    // characters) beat a bare `?` (one), which is exactly the rule
    // `read_identifier` applies in rust/src/lexer.rs.
    //
    // `identifier` therefore stays a node — every use site is unchanged — but
    // is no longer a single token, so `word` names the core regex instead.
    identifier: $ => seq($._identifier_core, optional(token.immediate('?'))),

    _identifier_core: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer: _ => /\d+/,

    float: _ => /\d+\.\d+/,

    string: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    string_content: _ => token.immediate(prec(1, /[^"\\{]+/)),

    interpolation: $ => seq(
      alias(token.immediate('{'), '{'),
      $._expression,
      '}',
    ),

    // Triple-quoted raw string: verbatim, no interpolation or escapes.
