editor-support/tree-sitter-petal/test/corpus/basics.txt
==================
Function declaration
==================

fn square(n)
  n * n
end

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list (parameter name: (identifier)))
    body: (block
      (binary_expression
        left: (identifier)
        right: (identifier)))))

==================
Let, literals and interpolation
==================

let name = "Ada"
let n = 42
let msg = "hi {name}"

---

(source_file
  (let_declaration name: (identifier) value: (string (string_content)))
  (let_declaration name: (identifier) value: (integer))
  (let_declaration
    name: (identifier)
    value: (string
      (string_content)
      (interpolation (identifier)))))

==================
Enum and match
==================

enum Shape
  Circle(radius),
  Square,
end

match s
  when Circle(r) -> r
  when _ -> 0
end

---

(source_file
  (enum_declaration
    name: (identifier)
    (enum_variant name: (identifier) fields: (parameter_list (parameter name: (identifier))))
    (enum_variant name: (identifier)))
  (match_expression
    subject: (identifier)
    (match_arm
      pattern: (variant_pattern name: (identifier) (identifier))
      body: (identifier))
    (match_arm
      pattern: (identifier)
      body: (integer))))

==================
List literal with a trailing comma
==================

let m = [1, 2, 3,]

---

(source_file
  (let_declaration
    name: (identifier)
    value: (list
      (integer)
      (integer)
      (integer))))

==================
JSX element
==================

let v = <div class="a">{item}</div>

---

(source_file
  (let_declaration
    name: (identifier)
    value: (jsx_element
      (jsx_opening_element
        name: (jsx_open_tag)
        (jsx_attribute name: (identifier) value: (string (string_content))))
      (jsx_expression (identifier))
      (jsx_closing_element name: (jsx_close_tag)))))

==================
Import statements
==================

import ui
import ui: button, clicked
import ui as u
import bloom/menu
import bloom/menu: open, close

---

(source_file
  (import_statement module: (module_path segment: (identifier)))
  (import_statement
    module: (module_path segment: (identifier))
    name: (identifier)
    name: (identifier))
  (import_statement
    module: (module_path segment: (identifier))
    alias: (identifier))
  (import_statement
    module: (module_path
      segment: (identifier)
      segment: (identifier)))
  (import_statement
    module: (module_path
      segment: (identifier)
      segment: (identifier))
    name: (identifier)
    name: (identifier)))

==================
Var and set
==================

var count = 0
state var hits = 0
set count = count + 1
set count += 1

---

(source_file
  (let_declaration
    name: (identifier)
    value: (integer))
  (state_declaration
    name: (identifier)
    value: (integer))
  (set_statement
    left: (identifier)
    right: (binary_expression left: (identifier) right: (integer)))
  (set_statement
    left: (identifier)
    right: (integer)))

==================
Pub declarations
==================

pub fn f()
  1
end

pub let a = 1
pub var b = 2
pub state c = 3

pub enum Color
  Red,
  Green,
end

pub class Rect
  x: num,
  y: num,
end

pub config let knob = 3

pub import bloom/menu: *

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block (integer)))
  (let_declaration name: (identifier) value: (integer))
  (let_declaration name: (identifier) value: (integer))
  (state_declaration name: (identifier) value: (integer))
  (enum_declaration
    name: (identifier)
    (enum_variant name: (identifier))
    (enum_variant name: (identifier)))
  (class_declaration
    name: (identifier)
    (class_field
      name: (identifier)
      type: (type_annotation type: (type_name (identifier))))
    (class_field
      name: (identifier)
      type: (type_annotation type: (type_name (identifier)))))
  (let_declaration name: (identifier) value: (integer))
  (import_statement
    module: (module_path
      segment: (identifier)
      segment: (identifier))))

==================
Deprecated export declarations
==================

export fn f()
  1
end

export let a = 1

export import bloom/menu: *

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block (integer)))
  (let_declaration name: (identifier) value: (integer))
  (import_statement
    module: (module_path
      segment: (identifier)
      segment: (identifier))))

================================================================================
Type annotations
================================================================================

let x: int = 1
var y: float = 2.0
state n: int = 0
state var s: str = "a"

fn scale(v, factor: float) -> float
  v * factor
end

let d = fn(n: int) -> n * 2

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    name: (identifier)
    type: (type_annotation type: (type_name (identifier)))
    value: (integer))
  (let_declaration
    name: (identifier)
    type: (type_annotation type: (type_name (identifier)))
    value: (float))
  (state_declaration
    name: (identifier)
    type: (type_annotation type: (type_name (identifier)))
    value: (integer))
  (state_declaration
    name: (identifier)
    type: (type_annotation type: (type_name (identifier)))
    value: (string (string_content)))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter name: (identifier))
      (parameter
        name: (identifier)
        type: (type_annotation type: (type_name (identifier)))))
    return_type: (return_type type: (type_name (identifier)))
    body: (block
      (binary_expression
        left: (identifier)
        right: (identifier))))
  (let_declaration
    name: (identifier)
    value: (lambda
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type_annotation type: (type_name (identifier)))))
      body: (binary_expression
        left: (identifier)
        right: (integer)))))

==================
Default parameter values
==================

fn greet(name, greeting = "hello", times: int = len(name) * 2)
  greeting
end

let pick = fn(xs, i = 0) -> xs[i]

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter name: (identifier))
      (parameter
        name: (identifier)
        default: (string (string_content)))
      (parameter
        name: (identifier)
        type: (type_annotation type: (type_name (identifier)))
        default: (binary_expression
          left: (call
            function: (identifier)
            arguments: (argument_list (identifier)))
          right: (integer))))
    body: (block (identifier)))
  (let_declaration
    name: (identifier)
    value: (lambda
      parameters: (parameter_list
        (parameter name: (identifier))
        (parameter
          name: (identifier)
          default: (integer)))
      body: (index_access
        object: (identifier)
        index: (identifier)))))

==================
Class and method declaration
==================

class Rect2
  x: int,
  w: int,
end

fn Rect2.center_x(r: Rect2) -> int
  r.x + r.w / 2
end

---

(source_file
  (class_declaration
    name: (identifier)
    (class_field
      name: (identifier)
      type: (type_annotation type: (type_name (identifier))))
    (class_field
      name: (identifier)
      type: (type_annotation type: (type_name (identifier)))))
  (function_declaration
    class: (identifier)
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_annotation type: (type_name (identifier)))))
    return_type: (return_type type: (type_name (identifier)))
    body: (block
      (binary_expression
        left: (field_access object: (identifier) field: (identifier))
        right: (binary_expression
          left: (field_access object: (identifier) field: (identifier))
          right: (integer))))))

==================
Argless lambdas
==================

let f = fn 42 end
let g = fn -> 1
let h = fn end

---

(source_file
  (let_declaration
    name: (identifier)
    value: (lambda body: (block (integer))))
  (let_declaration
    name: (identifier)
    value: (lambda body: (integer)))
  (let_declaration
    name: (identifier)
    value: (lambda)))

==================
Named arguments
==================

draw(x, y: 10, size: 2 + 3)
mk(a: 1)

---

(source_file
  (call
    function: (identifier)
    arguments: (argument_list
      (identifier)
      (named_argument name: (identifier) value: (integer))
      (named_argument
        name: (identifier)
        value: (binary_expression left: (integer) right: (integer)))))
  (call
    function: (identifier)
    arguments: (argument_list
      (named_argument name: (identifier) value: (integer)))))
